<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="8dp"
              android:orientation="vertical"
              android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@+id/query_first_name"
            android:text="@string/lbl_first_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/query_first_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:hint="@string/query_first_name_hint"
            android:inputType="text"
            android:lines="1"
            android:maxLength="40"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@+id/query_last_name"
            android:text="@string/lbl_last_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/query_last_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:hint="@string/query_last_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="40"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>