<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="20dp"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="com.redhat.healthcare.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tv_first_name"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/lbl_first_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tv_last_name"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/lbl_last_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tv_bp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/lbl_bp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_bp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/chk_bp_history"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/lbl_high_bp_history"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/chk_bp_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tv_medication"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/lbl_medication"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_medication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@+id/tv_interactions"
            android:text="@string/lbl_interaction"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_interactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/border_outline"
            android:lines="2"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@+id/tv_side_effects"
            android:text="@string/lbl_side_effects"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_side_effects"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:lines="2"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@+id/tv_results"
            android:text="@string/lbl_results"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_results"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:lines="2"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@+id/tv_warnings"
            android:text="@string/lbl_warnings"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_warnings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/border_outline"
            android:lines="2"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>
